DuPont DevSB/src/objects/pse__Project_Phase__c.object
<CustomObject>
    <customHelpPage>pse__ProjectPhaseHelp</customHelpPage>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Phases</relationshipLabel>
        <relationshipName>Project_Phases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project Phase</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Check_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>pse__End_Date__c &lt; pse__Start_Date__c</errorConditionFormula>
        <errorDisplayField>pse__End_Date__c</errorDisplayField>
        <errorMessage>End date cannot occur before start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(pse__Project__c)</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>Project is required</errorMessage>
    </validationRules>
</CustomObject>